# DatastarJinja

./: .gitignore  EO-Notes.md  README.md  init.py  install_dependencies.sh  main.py  menu_data.py  pyproject.toml  sample.py
.cursor/rules/: datastar-fastapi-rules.mdc
data/: eftk.duckdb  export-4.csv
db/: setup_db_school.sql
src/: utils.py
src/db/: __init__.py  db_school.py  db_spin.py  models.py  setup_db_spin.sql  setup_transfer.sql  spin_views.py
src/school/: README.md  __init__.py  courses.py  courses_routes.py  models.py  rooms.py  table_models.py  teachers.py  timeslots.py
static/: datastar-config.js  output.css
templates/: base.html  item.html  layout.html  success_message.html
templates/components/: README.md  data_table.html  entity_dialog.html  entity_page.html
templates/layout/: choice_selector.html  index.html  menu_data.py  navigation.html
templates/school/: course_form.html  courses.html  courses_table.html
templates/school/formatters/: course_code.html
templates/tables/components/: table.py  test_table.py
templates/tables/services/: table_service.py
